--- a/src/app/pages/pay-later/pay-later-deactivate/request/pay-later-deactivate-request.component.html
+++ b/src/app/pages/pay-later/pay-later-deactivate/request/pay-later-deactivate-request.component.html
@@ -20,8 +20,8 @@
       </ng-template>
     </ngx-datatable-column>
 
-    <ngx-datatable-column name="Kode iSMS" prop="isms_code">
-      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.isms_code}}
+    <ngx-datatable-column name="Kode iSMS" prop="code">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.code}}
       </ng-template>
     </ngx-datatable-column>
 
@@ -39,11 +39,29 @@
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.area}}
       </ng-template>
     </ngx-datatable-column>
-    <ngx-datatable-column name="Pengajuan Deaktivasi" prop="status">
-      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.status}}
+
+    <ngx-datatable-column name="Jumlah SRC Eligible" prop="total_src_eligible">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.total_src_eligible}}
       </ng-template>
     </ngx-datatable-column>
-    <ngx-datatable-column name="Approved/Declined" prop="approved">
+
+    <ngx-datatable-column name="Jumlah SRC Eligible" prop="total_src_eligible">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.total_src_eligible}}
+      </ng-template>
+    </ngx-datatable-column>
+
+    <ngx-datatable-column name="Jumlah SRC Pengguna" prop="total_src_pengguna">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.total_src_pengguna}}
+      </ng-template>
+    </ngx-datatable-column>
+
+    <ngx-datatable-column name="Total Transaksi" prop="total_transaction">
+      <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+        {{row.total_transaction | rupiahFormater}}
+      </ng-template>
+    </ngx-datatable-column>
+
+    <!-- <ngx-datatable-column name="Approved/Declined" prop="approved">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.approved}}
       </ng-template>
     </ngx-datatable-column>
@@ -57,7 +75,7 @@
     <ngx-datatable-column name="Reason" prop="reason">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.reason}}
       </ng-template>
-    </ngx-datatable-column>
+    </ngx-datatable-column> -->
 
     <ngx-datatable-column name="Tindakan" headerClass="textright" [sortable]="false">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
