feat: Manual Verification HQ #17 - lightbox image on submission detail

--- a/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.scss
+++ b/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.scss
@@ -58,9 +58,11 @@
   }
   .answer-img {
     width: 100%;
-    height: 200px;
+    min-height: 200px;
+    max-height: 400px;
     object-fit: contain;
     border-radius: 8;
+    margin: 0 auto;
   }
 
 }
