feat: Manual Verification HQ #18 previewImage

--- a/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/pages/dte/task-verification/dialog/confirm-dialog/confirm-dialog.component.html
@@ -155,7 +155,7 @@
           </div>
 
           <div *ngIf="item.type == 'image'" fxLayout="column" fxLayoutAlign="start start">
-            <img src="{{item.answer_image}}" class="answer-img"/>
+            <img src="{{item.answer_image}}" class="answer-img" (click)="previewImage(item.answer_image)"/>
           </div>
 
         </div>
