--- a/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-kategori-misi/dialog-kategori-misi.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-kategori-misi/dialog-kategori-misi.component.html
@@ -6,6 +6,7 @@
         matInput
         formControlName="name"
         placeholder="Nama Kategori Misi"
+        required
       />
     </mat-form-field>
   </mat-dialog-content>
