--- a/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-tipe-misi-edit/dialog-tipe-misi-edit.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-tipe-misi-edit/dialog-tipe-misi-edit.component.html
@@ -7,6 +7,7 @@
         formControlName="name"
         placeholder="Nama Tipe Misi"
         value="{{name}}"
+        required
       />
     </mat-form-field>
   </mat-dialog-content>
