--- a/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-tipe-misi/dialog-tipe-misi.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-tipe-misi/dialog-tipe-misi.component.html
@@ -2,7 +2,7 @@
   <h1 mat-dialog-title>Buat Tipe Misi</h1>
   <mat-dialog-content>
     <mat-form-field>
-      <input matInput formControlName="name" placeholder="Nama Tipe Misi" />
+      <input matInput formControlName="name" placeholder="Nama Tipe Misi" required/>
     </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions>
