--- a/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-toolbox-edit/dialog-toolbox-edit.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-toolbox-edit/dialog-toolbox-edit.component.html
@@ -7,6 +7,7 @@
         formControlName="name"
         placeholder="Nama Kategori Toolbox"
         value="{{name}}"
+        required
       />
     </mat-form-field>
   </mat-dialog-content>
