--- a/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-toolbox-edit/dialog-toolbox-edit.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-toolbox-edit/dialog-toolbox-edit.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (ngSubmit)="submit(form)">
   <h1 mat-dialog-title>Edit Kategori Toolbox</h1>
   <mat-dialog-content>
-    <mat-form-field>
+    <mat-form-field style="width: 100%;">
       <input
         matInput
         formControlName="name"
@@ -9,6 +9,12 @@
         value="{{name}}"
         required
       />
+    </mat-form-field>
+    <mat-form-field style="width: 100%;">
+      <mat-select placeholder="Pilih Status" formControlName="status">
+        <mat-option value="active">Aktif</mat-option>
+        <mat-option value="inactive">Tidak Aktif</mat-option>
+      </mat-select>
     </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions>
