--- a/src/app/pages/user-management/customer/detail/customer-detail.component.html
+++ b/src/app/pages/user-management/customer/detail/customer-detail.component.html
@@ -53,6 +53,9 @@
             <mat-form-field fxFlex="45" class="is-light">
               <input matInput placeholder="Apps Version" formControlName="version">
             </mat-form-field>
+            <mat-form-field fxFlex="45" class="is-light">
+              <input matInput placeholder="Nomor Ponsel" formControlName="phone">
+            </mat-form-field>
           </div>
 
           <!-- <mat-form-field fxFlex="100" class="is-light">
