--- a/src/app/pages/user-management/retailer/edit/retailer-edit.component.scss
+++ b/src/app/pages/user-management/retailer/edit/retailer-edit.component.scss
@@ -1,3 +1,6 @@
 :host /deep/ .mat-input-element:disabled {
   color: rgba(0, 0, 0, 1) !important;
 }
+mat-form-field.mat-form-field.paguyuban {
+  font-size: 16px;
+}
