--- a/src/app/pages/notification/create/notification-create.component.html
+++ b/src/app/pages/notification/create/notification-create.component.html
@@ -448,7 +448,7 @@
             </ngx-datatable-column>
           </ngx-datatable>
         </div>
-        <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
+        <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px" *ngIf="actionType==='create'">
           <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
             SIMPAN
           </button>
