--- a/src/app/pages/settings/role/create/role-create.component.html
+++ b/src/app/pages/settings/role/create/role-create.component.html
@@ -81,15 +81,18 @@
             <div class="title" fxFlex="100">{{role.nama | toCapitalize}}</div>
 
             <div class="item" fxFlex="100" fxFlex.gt-xs="30" *ngFor="let items of role.menu; let i = index;" [ngClass]="i%3 !== 2 ? 'line' : ''">
+              
               <div class="question" *ngIf="items.nama !== 'task verification'">{{items.nama | toCapitalize}}</div>
+
               <div class="answer" *ngIf="items.nama !== 'task verification'">
                 <div fxLayout="row wrap" fxLayoutAlign="start center">
                   <div fxFlex="25" *ngFor="let item of items.value">
                     <div class="access-name">{{item.nama | toCapitalize}}</div>
-                    <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="item.status"></mat-slide-toggle>
+                    <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="item.status" (change)="onToggleChange(item, items, role, $event)"></mat-slide-toggle>
                   </div>
                 </div>
               </div>
+
               <div class="question" *ngIf="items.nama == 'task verification'">{{'Verifikasi Misi' | toCapitalize}}</div>
               <div class="answer mb-16" *ngIf="items.nama == 'task verification'">
                 <div fxLayout="row wrap" fxLayoutAlign="start center">
