--- a/src/app/pages/settings/role/edit/role-edit.component.html
+++ b/src/app/pages/settings/role/edit/role-edit.component.html
@@ -87,7 +87,7 @@
                 <div fxLayout="row wrap" fxLayoutAlign="start center">
                   <div fxFlex="25" *ngFor="let item of items.value">
                     <div class="access-name">{{item.nama | toCapitalize}}</div>
-                    <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="item.status" [disabled]="isDetail"></mat-slide-toggle>
+                    <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="item.status" [disabled]="isDetail" (change)="onToggleChange(item, items, role, $event)"></mat-slide-toggle>
                   </div>
                 </div>
               </div>
