fixing link misi

--- a/src/app/pages/dte/schedule-program/detail/schedule-program-detail.component.html
+++ b/src/app/pages/dte/schedule-program/detail/schedule-program-detail.component.html
@@ -126,7 +126,8 @@
                     disabled>
                   <mat-icon matSuffix>date_range</mat-icon>
                 </mat-form-field>
-                <mat-form-field fxFlex="45%" class="is-light form-primary">
+                <mat-form-field fxFlex="45%" class="is-light form-primary"
+                  *ngIf="item.link_misi && dataScheduler['status_scheduler'] === 'publish'">
                   <input matInput type="text" placeholder="Link Misi" [value]="item.link_misi" disabled #linkMisi>
                   <mat-icon matSuffix (click)="copyMessage(item.link_misi)" style="cursor: pointer;"
                     matTooltip="Salin Link Misi">content_copy
