fix: Gagal Create Produk

--- a/src/app/pages/sku-management/product/create/product-create.component.html
+++ b/src/app/pages/sku-management/product/create/product-create.component.html
@@ -435,8 +435,8 @@
 
 
   <!-- Generate HTML to canvas-->
-  <!-- <div style="position: absolute; z-index: -2; top: 0; margin-left: -300px;" id="imageConverted" #screen
+  <div style="position: absolute; z-index: -2; top: 0; margin-left: -300px;" id="imageConverted" #screen
     class="image-sku">
     <img id="image" [src]='imageSku' />
-  </div> -->
+  </div>
 </div>
