--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -148,13 +148,13 @@
           </ng-template> -->
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Classification" prop="classification" summary-template="activeCell">
+        <ngx-datatable-column name="Retail Classification" prop="classification" summary-template="activeCell">
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="SCR Classification" prop="src_classification" summary-template="activeCell">
+        <ngx-datatable-column name="SRC Classification" prop="src_classification" summary-template="activeCell">
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="SCR Type" prop="src_type" summary-template="activeCell">
+        <ngx-datatable-column name="SRC Type" prop="src_type" summary-template="activeCell">
         </ngx-datatable-column>
 
         <ngx-datatable-column name="Kode WS" prop="wholesaler_code" summary-template="activeCell" [sortable]="false">
